--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Myblog by anryzhang</title>
+    <title>diy1818 by anryzhang</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Myblog</h1>
-        <h2>my blog</h2>
+        <h1>diy1818</h1>
+        <h2>diy1818</h2>
         <a href="https://github.com/anryzhang/myBlog" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
