--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>diy1818</h1>
-        <h2>diy1818</h2>
+        <h2>my blog</h2>
         <a href="https://github.com/anryzhang/myBlog" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
