--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
-title: 我的Blog
 ---
-<h2>{{ page.title }}</h2>
-<p>最新文章</p>
+<h2>最新文章</h2>
 <ul>
     {% for post in site.posts %}
     <li>{{ post.date | date_to_string }} <a href="/myBlog{{ site.url }}{{ post.url }}" target="_blank">{{ post.title }}</a></li>
