--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title:
-description: diy设计网,关注网站设计,网站建设,前端开发技术,SEO优化,用户体验,unity3d,u3d,maya,cad,flash。
+description: diy设计网,关注网站设计,网站建设,前端开发技术,SEO优化,用户体验,unity3d,u3d,maya,cad,flash
 keywords:  GitHub, Jekyll, css, html, javascript, logo, design, unity, maya, cad, 前端开发
 isIndex: true
 ---
