--- a/images/job.html
+++ b/images/job.html
@@ -126,6 +126,15 @@
     </td>
 </tr>
 <tr>
+    <td class="zr-tit">QQ</td>
+    <td>2661659658</td>
+    <td class="zr-tit">旺旺</td>
+    <td colspan="2">        
+        <a target="_blank" href="http://amos.alicdn.com/msg.aw?v=2&uid=torch18&site=cnalichn&s=10&charset=UTF-8" ><img border="0" src="http://amos.alicdn.com/online.aw?v=2&uid=torch18&site=cnalichn&s=10&charset=UTF-8" alt="点击这里给我发消息" /></a>
+        (torch18)
+    </td>
+</tr>
+<tr>
     <td class="zr-tit">个人网站</td>
     <td colspan="4">
         <a href="http://www.diy1818.com" target="_blank">http://www.diy1818.com</a>
