--- a/images/job.html
+++ b/images/job.html
@@ -122,7 +122,7 @@
     <td>13136183225</td>
     <td class="zr-tit">邮箱</td>
     <td colspan="2">
-        <a href="mailto:zr8732@126.com">zr8732@126.com</a>
+        <a href="mailto:zr8732@126.com">zr8732@126.com</a> (为了方便勾通，请把贵公司名称与地址到此邮箱。)
     </td>
 </tr>
 <tr>
