--- a/images/job.html
+++ b/images/job.html
@@ -122,7 +122,8 @@
     <td>13136183225</td>
     <td class="zr-tit">邮箱</td>
     <td colspan="2">
-        <a href="mailto:zr8732@126.com">zr8732@126.com</a> (为了方便勾通，请把贵公司名称与地址到此邮箱。)
+        <a style="display:inline-block; width:auto" href="mailto:zr8732@126.com">zr8732@126.com</a>
+        <span style="display:inline-block; width:auto; color:#666">(为了方便勾通，请把贵公司名称与地址到此邮箱。)</span>
     </td>
 </tr>
 <tr>
