--- a/images/job.html
+++ b/images/job.html
@@ -123,7 +123,7 @@
     <td class="zr-tit">邮箱</td>
     <td colspan="2">
         <a style="display:inline-block; width:auto" href="mailto:zr8732@126.com">zr8732@126.com</a>
-        <span style="display:inline-block; width:auto; color:#666">(为了方便勾通，请把贵公司名称与地址到此邮箱。)</span>
+        <span style="display:inline-block; width:auto; color:#666">(为了方便勾通，请把贵公司名称与地址发到此邮箱。)</span>
     </td>
 </tr>
 <tr>
