--- a/images/job.html
+++ b/images/job.html
@@ -151,7 +151,50 @@
     <td colspan="4">
         <p>
             1.没来阿里之前。都收录于我的个人网站
-            <a href="http://www.diy1818.com/a/zuopinanli/" target="_blank">www.diy1818.com</a>
+            <a href="http://www.diy1818.com/a/zuopinanli/" target="_blank">www.diy1818.com</a><br>
+            2.在阿里工作
+            <pre>
+一淘PC前端开发
+    http://www.etao.com/go/act/etao/dianping/new-hot.php?spm=0.0.0.0.O5CsqZ
+    http://www.etao.com/go/act/etao/summelove.php?spm=0.0.0.0.vuxQg9
+    http://www.etao.com/go/act/etao/only/baiqueling-v02.php?spm=0.0.0.0.vuxQg9
+    http://www.etao.com/go/act/etao/3c/ipad3.php?spm=0.0.0.0.vuxQg9
+    http://www.etao.com/go/act/etao/vip/ipad.php?spm=0.0.0.0.O5CsqZ
+    http://www.etao.com/go/act/etao/youhui/center.php?spm=0.0.0.0.vuxQg9
+    http://www.etao.com/go/act/etao/youping.php?spm=0.0.0.0.O5CsqZ
+    http://www.etao.com/go/act/etao/jf/jfbgames.php?spm=0.0.0.0.vuxQg9
+    http://www.etao.com/go/act/etao/jf/1111.php?spm=0.0.0.0.O5CsqZ
+    http://www.etao.com/go/act/etao/only/vip/vipzx.php?spm=0.0.0.0.O5CsqZ
+    http://www.etao.com/go/act/etao/gws/edm-01.php?spm=0.0.0.0.zInnMR
+旺旺客户端前端开发
+    http://www.taobao.com/go/act/chn/ww/shopinfo.php?spm=0.0.0.0.O5CsqZ
+    http://www.taobao.com/go/act/integrated/ww/wwexp.php?spm=0.0.0.0.fheDTq
+    旺旺第日焦点更多
+    我的钱包
+    淘助手-店铺优惠
+    旺旺官网改版
+    http://web.wangwang.taobao.com/ww/2013/index.htm
+    http://www.taobao.com/go/act/go/chn/wwmac/index.php.php?spm=0.0.0.0.PCZCcC
+淘宝无线PC页面开发
+    http://www.taobao.com/go/act/wx/voip-wap.php?
+    http://www.taobao.com/go/act/other/1111.php?spm=0.0.0.0.fheDTq
+    http://www.etao.com/go/act/etao/other/wangdoujia.php?spm=0.0.0.0.zInnMR
+    微淘公众平台消息中心
+旺信前端
+    http://www.taobao.com/go/act/wx/fun-app.php?spm=0.0.0.0.XvXivs
+    http://www.taobao.com/go/act/wx/voip.php?
+    http://www.taobao.com/go/act/other/wx/pushmsg.php?spm=0.0.0.0.fheDTq
+    http://www.taobao.com/go/act/wx/qixi.php?spm=0.0.0.0.fheDTq
+    旺信官网改版
+    http://wangxin.taobao.com
+    http://www.taobao.com/go/act/wx/exp/view.php?spm=0.0.0.0.sNmdOA
+    http://www.taobao.com/go/act/wx/fun-app-wap.php?spm=0.0.0.0.fheDTq
+
+商家事业部前端开发
+    千牛插件中心优化
+    旺旺企业版后台管理(在开发中...)
+            
+            </pre>
         </p>
     </td>
 </tr>
