--- a/images/job.html
+++ b/images/job.html
@@ -18,7 +18,7 @@
         }
 
         .zr_layout {
-            width: 650px;
+            width: 660px;
             margin: 10px auto;
             overflow: hidden;
         }
@@ -231,7 +231,8 @@
             通过公司对外的培训推广页面测试seo实施的效果。也使自己在前端代码开发中，更重视代码结构的语义化。从而订制了html,css，js的开发规范。
         </p>
         <p>
-            2.通过as3对电子杂志中的一些组件的控制。不过多文字描述。请下载  flash电子杂志：<a href="http://static.md.veimg.cn/images/hotelier/eMagazine/%E9%85%92%E5%BA%97%E4%BA%BA%E7%AC%AC11%E6%9C%9F_%E8%BF%88%E7%82%B9.rar" target="_blank">第十一期</a>  <a href="http://static.md.veimg.cn/images/hotelier/eMagazine/%E9%85%92%E5%BA%97%E4%BA%BA%E7%AC%AC12%E6%9C%9F_%E8%BF%88%E7%82%B9.rar" target="_blank">第十二期</a>
+            2.通过as3对电子杂志中的一些组件的控制。不过多文字描述。请下载  flash电子杂志：<br>
+            <a href="http://static.md.veimg.cn/images/hotelier/eMagazine/%E9%85%92%E5%BA%97%E4%BA%BA%E7%AC%AC11%E6%9C%9F_%E8%BF%88%E7%82%B9.rar" target="_blank">第十一期</a> <br/> <a href="http://static.md.veimg.cn/images/hotelier/eMagazine/%E9%85%92%E5%BA%97%E4%BA%BA%E7%AC%AC12%E6%9C%9F_%E8%BF%88%E7%82%B9.rar" target="_blank">第十二期</a>
         </p>
         
 
