--- a/images/job.html
+++ b/images/job.html
@@ -37,6 +37,7 @@
             background: #fff;
             height: 30px;
             padding: 1px 4px;
+            width:108px;
         }
 
         .zr tr td p {
