--- a/images/job.html
+++ b/images/job.html
@@ -67,6 +67,9 @@
             background: #eee;
             padding: 10px;
             border:1px solid #E0DEDE;
+            margin-top: -2px;
+            width: 100%;
+            margin-left: -5PX;
         }
 
     </style>
