--- a/images/job.html
+++ b/images/job.html
@@ -44,6 +44,8 @@
             word-break: break-all;
             word-wrap: break-word;
             line-height: 22px;
+            padding: 2px 10px;
+            margin: 0px;
         }
 
         .zr tr td p strong {
