--- a/images/job.html
+++ b/images/job.html
@@ -74,6 +74,9 @@
             width: 100%;
             margin-left: -5PX;
         }
+        ol{
+            margin-left:32px;
+        }
 
     </style>
 </head>
