--- a/code/designMode/module/index.html
+++ b/code/designMode/module/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script src="../../lib/underscore.js"></script>
     <script src="module.js"></script>
     <script src="basketModule.js"></script>
 
