--- a/code/designMode/singleton/index.html
+++ b/code/designMode/singleton/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="singleton.js"></script>
+    <script src="singletonModule.js"></script>
 </head>
 <body>
 
