--- a/demo/heart.html
+++ b/demo/heart.html
@@ -25,7 +25,7 @@
         color: #fff;
         font-size: 30px;
         text-align: center;
-        margin-left: -66px;
+        margin-left: -124px;
         margin-top: -10px;
         -webkit-animation: pound 0.3s infinite;
         -o-animation: pound 0.3s infinite;
@@ -42,7 +42,7 @@
 </style>
 <div class="heart">
     <img src="heart.png" alt=""/>
-    <div class="heart-text">红包=全是坑</div>
+    <div class="heart-text">前任是个坑，爱呢？</div>
 </div>
 </body>
 </html>
