--- a/demo/html/try.html
+++ b/demo/html/try.html
@@ -14,6 +14,17 @@
         console.log("finally");
     }
 
+    function max(){
+        var maxVal = -Infinity;
+        for(var i = 0; i < arguments.length; i++){
+            if(arguments[i] > maxVal){
+                maxVal = arguments[i];
+            }
+        }
+        return  maxVal;
+    }
+    var maxV =max(1,6,9,2,3,4);
+    console.log(maxV);
 </script>
 </body>
 </html>
