--- a/demo/html/for.html
+++ b/demo/html/for.html
@@ -41,6 +41,19 @@
         job:"web"
     };
     keys(b);
+
+    function f(){
+        var arg = Array.apply(null,arguments);
+        var argc= Array.call(this,arguments);
+        console.log(argc[0]);
+        console.log(arg);
+        for(var i = 0; i < arg.length; i++){
+            console.log(arg[i]);
+        }
+    }
+
+    f(1,3,4,2,5);
+    f('t','e','s','t');
 </script>
 </body>
 </html>
