--- a/images/job.html
+++ b/images/job.html
@@ -16,6 +16,10 @@
             border-spacing: 0;
             position: relative;
         }
+        .zr tr td p.f12{
+            font-size:12px;
+            padding-left:30px;
+        }
 
         .zr_layout {
             width: 660px;
@@ -174,22 +178,34 @@
 </tr>
 <tr>
 	<td class="zr-tit">项目经验</td>
-	<td colspan="4">
-	<p>1.在阿里之前的都收录于我的个人网站 www.diy1818.com</p>
-	<p>
-2.在阿里的一些项目：
-<pre>
-  旺旺第日焦点
-  我的钱包
-  淘助手-店铺优惠    
-  旺旺/旺信官网改版    
-  淘宝无线PC页面开发    
-  微淘公众平台消息中心
-  旺信前端
-  千牛插件中心优化
-  旺旺企业版后台管理
-</pre>
-</p></p>
+	<td colspan="4" class="f12">
+        <p>1.在阿里之前的都收录于我的个人网站 www.diy1818.com</p>
+        <p>2.在阿里的一些项目：</p>
+
+        <p class="f12">
+          旺旺第日焦点<br>
+          我的钱包<br>
+          淘助手-店铺优惠<br>
+          旺旺/旺信官网改版<br>
+          淘宝无线PC页面开发<br>
+          微淘公众平台消息中心<br>
+          旺信前端<br>
+          千牛插件中心优化<br>
+          旺旺企业版后台管理<br>
+        </p>
+
+       <p>3.网新
+
+        </p>
+        <p class="f12">
+            1.恒天云平台<br>
+            2.blueMorpho
+        </p>
+        <p>4.想去网</p>
+        <p class="f12">
+            1.想去网PC业务<br>
+            2.想去网移动H5
+        </p>
 	</td>
 </tr>
 <tr>
