--- a/demo/webpack/index_config.html
+++ b/demo/webpack/index_config.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="build_config.js"></script>
+    <link rel="stylesheet" href="build/entry_config.css">
+    <script src="build/entry_config.js"></script>
 </head>
 <body>
 
