--- a/demo/webpack/index.html
+++ b/demo/webpack/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="build.js"></script>
+<script src="build/entry.js"></script>
 
 </body>
 </html>
