--- a/demo/es2015/forof_02.html
+++ b/demo/es2015/forof_02.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
-<script src="dist/t4.js"></script>
+<script src="dist/forof_02.js"> </script>
 </body>
 </html>
