--- a/demo/webpack/index_config.html
+++ b/demo/webpack/index_config.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>title</title>
     <link rel="stylesheet" href="build/entry_config.css">
     <script src="build/entry_config.js"></script>
 </head>
