--- a/demo/gulp-new/src/index.html
+++ b/demo/gulp-new/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../dest/css/t1.css?rev=@@hash">
-    <link rel="stylesheet" href="../dest/css/t2.css?rev=@@hash">
+    <link rel="stylesheet" href="../dist/css/t1.css?rev=@@hash">
+    <link rel="stylesheet" href="../dist/css/t2.css?rev=@@hash">
 
 </head>
 <body>
@@ -15,8 +15,8 @@
 <div>test 2</div>
 
 
-<script src="../dest/js/app.js?rev=@@hash"></script>
-<script src="../dest/js/other.js?rev=@@hash"></script>
+<script src="../dist/js/app.js?rev=@@hash"></script>
+<script src="../dist/js/other.js?rev=@@hash"></script>
 
 </body>
 </html>
