--- a/demo/webpack_react/src/index.html
+++ b/demo/webpack_react/src/index.html
@@ -18,6 +18,44 @@
     <div id="J_app3"></div>
 
 
+    <div class='warp'>
+      <header>
+          <div>
+            logo
+          </div>
+          <nav>
+            <ul>
+              <li>01</li>
+              <li>02</li>
+              <li>03</li>
+              <li>04</li>
+              <li>05</li>
+            </ul>
+          </nav>
+      </header>
+      <section>
+          <div class='body'>
+              <div class='banner' id='J_bannerTop'>
+                banner
+              </div>
+
+            <div class='product-list-box' id='J_componentsList'>
+              <header>头</header>
+              <div class='product-cont' id='J_proList'>
+                <ul>
+                  <li>01</li>
+                  <li>02</li>
+                  <li>03</li>
+                  <li>04</li>
+                  <li>05</li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+      </section>
+    </div>
+
     <script src="js/index.js?rev=@@hash"></script>
   </body>
 </html>
