--- a/demo/webpack_react/src/temp_html/header.html
+++ b/demo/webpack_react/src/temp_html/header.html
@@ -8,4 +8,5 @@
     <a href="index.html">index</a>
     <a href="page2.html">page2</a>
     <a href="page3.html">page3</a>
+    <a href="page4.html">page4</a>
 </div>
