--- a/demo/webpack_react/src/index.html
+++ b/demo/webpack_react/src/index.html
@@ -13,48 +13,24 @@
     @@include('temp_html/header.html')
 
     <div id="J_app"></div>
+    <h3>组件协同使用</h3>
+    <div class='test' id='J_componentXieTong'>
+
+    </div>
+
+    <h3>生命周期</h3>
+    <div class='test' id='J_Mount'></div>
+
+    <h3>ajax</h3>
+    <div class='test' id='J_ajax'>
+
+    </div>
+
     <div id="J_app2"></div>
 
     <div id="J_app3"></div>
 
 
-    <div class='warp'>
-      <header>
-          <div>
-            logo
-          </div>
-          <nav>
-            <ul>
-              <li>01</li>
-              <li>02</li>
-              <li>03</li>
-              <li>04</li>
-              <li>05</li>
-            </ul>
-          </nav>
-      </header>
-      <section>
-          <div class='body'>
-              <div class='banner' id='J_bannerTop'>
-                banner
-              </div>
-
-            <div class='product-list-box' id='J_componentsList'>
-              <header>头</header>
-              <div class='product-cont' id='J_proList'>
-                <ul>
-                  <li>01</li>
-                  <li>02</li>
-                  <li>03</li>
-                  <li>04</li>
-                  <li>05</li>
-                </ul>
-              </div>
-            </div>
-
-          </div>
-      </section>
-    </div>
 
     <script src="js/index.js?rev=@@hash"></script>
   </body>
