--- a/demo/webpack_react/src/index.html
+++ b/demo/webpack_react/src/index.html
@@ -30,6 +30,9 @@
 
     <div id="J_app3"></div>
 
+    <div class="J_item item" ></div>
+    <div class="J_item item"></div>
+
 
 
     <script src="js/index.js?rev=@@hash"></script>
