--- a/images/job.html
+++ b/images/job.html
@@ -183,7 +183,7 @@
         <p>2.在阿里的一些项目：</p>
 
         <p class="f12">
-          旺旺第日焦点<br>
+          旺旺每日焦点<br>
           我的钱包<br>
           淘助手-店铺优惠<br>
           旺旺/旺信官网改版<br>
