--- a/demo/webpack_react/src/page4.html
+++ b/demo/webpack_react/src/page4.html
@@ -8,10 +8,15 @@
 <body>
 @@include('temp_html/header.html')
 
-<div >
-    page4.html
-    test
-
+<div class='J_IT tab-box'>
+    <ul class='J_tabNav tab-nav'>
+        <li class='active'>tab1</li>
+        <li>tab2</li>
+    </ul>
+    <div class='J_tabCont tab-content'>
+        <div class='tab-pane active'>cont1</div>
+        <div class='tab-pane'>cont2</div>
+    </div>
 </div>
 
 <div id='J_app'>
