--- a/demo/webpack_react/src/page5.html
+++ b/demo/webpack_react/src/page5.html
@@ -51,7 +51,21 @@
 
 </div>
 
+<div id="J_switch">
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+    <span class="pre"> < </span>
+    <span class="next"> > </span>
+</div>
 
+<div class="mousebox">
+    <div class="main"></div>
+    <div class="sub"></div>
+</div>
 
 <script src="js/page5.js?rev=@@hash"></script>
 </body>
