--- a/demo/webpack_react/src/temp_html/header.html
+++ b/demo/webpack_react/src/temp_html/header.html
@@ -10,4 +10,5 @@
     <a href="page3.html">page3</a>
     <a href="page4.html">page4</a>
     <a href="page5.html">page5</a>
+    <a href="page6.html">page6</a>
 </div>
