--- a/demo/js_oop/js_prototype_3.html
+++ b/demo/js_oop/js_prototype_3.html
@@ -64,6 +64,15 @@
 
     }
 
+    var A = function () {};
+    var B = function () {};
+    A.prototype.stuff = [1,2,3];
+    A.prototype.name = 'a';
+
+    Extend(B, A);
+
+    var b  = new B();
+
 </script>
 </body>
 </html>
