--- a/demo/promise/p1.html
+++ b/demo/promise/p1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    var promise = new Promise(function(resolve){
+    let promise = new Promise(function(resolve){
         resolve(42);
     });
     promise.then(function(value){
