--- a/images/job.html
+++ b/images/job.html
@@ -111,7 +111,7 @@
 </tr>
 <tr>
     <td class="zr-tit">学 历</td>
-    <td>专科</td>
+    <td>大专</td>
     <td class="zr-tit">籍　贯</td>
     <td>河南-信阳</td>
 </tr>
@@ -162,7 +162,16 @@
         <a href="http://anryzhang.github.io/myBlog" target="_blank">http://anryzhang.github.io/myBlog</a>
     </td>
 </tr>
-
+<tr>
+    <td class="zr-tit">
+        个人优势
+    </td>
+    <td colspan="4">
+        <p style="padding: 15px 0;">
+            做过产品,视觉设计、flash设计. 2013年开始至今全职前端开发,自学能力强,web/h5都有实战经验。Less，Sass, git，gulp，grunt，WebPack, AMD，CMD, ES6, Angular, Vue, React都在日常项目中实施使用
+        </p>
+    </td>
+</tr>
 <tr>
     <td class="zr-tit">专业技能</td>
     <td colspan="4">
@@ -176,43 +185,57 @@
 </p>
     </td>
 </tr>
-<tr>
-	<td class="zr-tit">项目经验</td>
-	<td colspan="4" class="f12">
-        <p>1.在阿里之前的都收录于我的个人网站 www.diy1818.com</p>
-        <p>2.在阿里的一些项目：</p>
 
-        <p class="f12">
-          旺旺每日焦点<br>
-          我的钱包<br>
-          淘助手-店铺优惠<br>
-          旺旺/旺信官网改版<br>
-          淘宝无线PC页面开发<br>
-          微淘公众平台消息中心<br>
-          旺信前端<br>
-          千牛插件中心优化<br>
-          旺旺企业版后台管理<br>
-        </p>
-
-       <p>3.网新
-
-        </p>
-        <p class="f12">
-            1.恒天云平台<br>
-            2.blueMorpho
-        </p>
-        <p>4.想去网</p>
-        <p class="f12">
-            1.想去网PC业务<br>
-            2.想去网移动H5
-        </p>
-	</td>
-</tr>
 <tr>
     <td class="zr-tit">工作经历</td>
     <td colspan="4">
         <h3>
-            2015/3- 至今：杭州蚯蚓科技有限公司 前端开发
+            2016/3- 至今：杭州云衣间网络技术有限公司 前端开发
+        </h3>
+        <h4>岗位责任：</h4>
+        <p>1. 项目流程搭建<br/>
+            2. 业务功能开发维护</p>
+        <h4>项目描述：</h4>
+
+        <ol class="zr_item">
+            <li>
+                <strong>	YCOSYSTEM 网站</strong>
+                <p>
+                    <a href="https://test.ycosystem.com/#/index" target="_blank">YCOSYSTEM 网站</a><br>
+                    功能开发维护<br>
+                    (技术栈:angular + ES6 + webPack + sass) (https://test.ycosystem.com/#/index )<br> 零售商账户:309216506@qq.com ;密码:dertod <br>设计师账户:cloud@yunejian.com;密码:cloud
+
+                </p>
+
+
+            </li>
+            <li>
+                <strong>	YCOSYSTEM 移动网站</strong>
+                <p>
+                    <a href="http://mt.ycosystem.com/index" target="_blank">YCOSYSTEM 移动网站 </a>功能开发维护<br>
+                    (技术栈: Vue + ES6 + webPack + Less)(http://mt.ycosystem.com/index) 测试账户用PC的即可.<br>
+                </p>
+            </li>
+            <li>
+                <strong>	微店,开发维护</strong>
+                <p>
+
+                    微信关注 '云e间'公众号进入微店,开发维护<br>
+                    (技术栈: React + ES6 + webPack + Less)还在开发中.可以测试<br>
+                </p>
+            </li>
+            <li>
+                <strong>	云衣间官网开发维护;地址(http://www.ycofoundation.com/)</strong>
+
+            </li>
+            <li>
+                <strong>	codashowroom.com PC与移动版开发维护;地址:(http://www.codashowroom.com/)</strong>
+
+            </li>
+
+        </ol>
+        <h3>
+            2015/3- 2016/3：杭州蚯蚓科技有限公司 前端开发
         </h3>
         <h4>岗位责任：</h4>
         <p>负责PC页面、H5页面前端开发，主要做想去网相关的业务，实现业务需求功能。</p>
@@ -222,7 +245,7 @@
         </p>
         <ol class="zr_item">
             <li>
-                <strong>1.	想去网PC改版</strong>
+                <strong>	想去网PC改版</strong>
                 <p>
                     <a href="http://www.xiangqu.com/" target="_blank">想去网官网</a><br>
                     想去网PC,用户前台的页面除了小站，目前其他频道已经与新的UI统一，部分代码逻辑做了梳理，重构。
@@ -232,7 +255,7 @@
 
             </li>
             <li>
-                <strong>2.	想去移动H5</strong>
+                <strong>	想去移动H5</strong>
                 <p>
                     <a href="http://m.xiangqu.com" target="_blank">想去网移动版</a>
                     只完成了“我的订单”与下单页面的重构。商品详情的梳理。
@@ -251,7 +274,7 @@
         </p>
         <ol class="zr_item">
             <li>
-                <strong>1.	BlueMorpho IDE</strong>
+                <strong>	BlueMorpho IDE</strong>
                 <p>
                     <a href="http://www.bluemorpho-tech.cn/" target="_blank">BlueMorpho IDE 官网</a><br>
                     <a href="http://bluemorpho.hengtiansoft.com/bluemorpho/signin" target="_blank">BlueMorpho IDE 登录线上体验接口</a>(用户名：ziyu123456;密码：a123456)<br>
@@ -260,7 +283,7 @@
 
             </li>
             <li>
-                <strong>2.	恒天云平台</strong>
+                <strong>	恒天云平台</strong>
                 <p>
                     <a href="http://www.hengtianyun.com/" target="_blank">恒天云平台入口</a>
                 </p>
@@ -407,13 +430,13 @@
             2007/9--2009/7 浙江大学 计算机科学技术 全日制专科
         </p>
 
-        <p>
-            2004/09–2007/07 商城县丰集高中
-        </p>
+        <!--<p>-->
+            <!--2004/09–2007/07 商城县丰集高中-->
+        <!--</p>-->
 
-        <p>
-            2001/09–2004/07 商城县丰集初中
-        </p>
+        <!--<p>-->
+            <!--2001/09–2004/07 商城县丰集初中-->
+        <!--</p>-->
     </td>
 </tr>
 
