--- a/images/job.html
+++ b/images/job.html
@@ -220,7 +220,7 @@
                 <strong>	微店,开发维护</strong>
                 <p>
 
-                    微信关注 '云e间'公众号进入微店,开发维护<br>
+                    微信关注 'HRB_ZUCZUG'公众号进入"浏览微店"<br>
                     (技术栈: React + ES6 + webPack + Less)还在开发中.可以测试<br>
                 </p>
             </li>
